# cr_hand_urdf

./: README.md  package.xml  setup.cfg  setup.py
config/: ros2_controller.yaml  sensor_parameters.yaml
launch/: display.launch.py  gazebo.launch.py
meshes/: base_link.stl  link1_1_1.stl  link1_3_1.stl  link2_1_1.stl  link2_2_1.stl  link3_1_1.stl  link3_2_1.stl  link4_1_1.stl  link4_2_1.stl  link5_1_1.stl  link5_2_1.stl
urdf/: CR-Hand_URDF.gazebo  CR-Hand_URDF.xacro  cr_hand_urdf.gazebo  cr_hand_urdf.xacro  materials.xacro  sensors.xacro
