<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>CR-Hand_URDF</name>
  <version>0.0.0</version>
<description>The CR-Hand_URDF package</description>
  <maintainer email="n.chowchinsung@gmail.com">Nico</maintainer>
  <license>TODO: License declaration</license>

  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


<depend>ros_gz_bridge</depend>
                                  <depend>ros_gz_image</depend>
                                  <depend>ros_gz_sim</depend>
                                 <depend>joint_state_broadcaster</depend>
                                  <depend>joint_trajectory_controller</depend>
                                  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
